# robot4ws-gazebo-plugins

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: joints_control_config.yaml
include/: JointsControllerPlugin.hh  JointsControllerPluginDynamixel.hh  apply_all_wheels_terramechanic_model.h  apply_single_wheel_terramechanic_model.h  archimede_apply_artificial_slip.h  archimede_apply_force.h  archimede_get_body_pose.h  archimede_kinematics_plugin.h  archimede_odometry.h  constants.h  procedural_obj_gen_plugin.h  trp_get_body_pose.h  utility.h
include/Modelli_DT_robot/: load_model.py
src/: JointsControllerPlugin.cc  JointsControllerPluginDynamixel.cc  apply_all_wheels_terramechanic_model.cpp  apply_single_wheel_terramechanic_model.cpp  apply_soil_terrain.cpp  archimede_apply_artificial_slip.cpp  archimede_apply_artificial_slip_ML.py  archimede_apply_artificial_slip_neural_network_node.py  archimede_apply_force.cpp  archimede_get_body_pose.cpp  archimede_kinematics_plugin.cpp  archimede_odometry.cpp  cmd_vel_publisher_node.py  custom_slip_function.py  procedural_obj_gen_plugin.cpp  trp_get_body_pose.cpp  utility.cpp
