<?xml version="1.0"?>
<package format="3">
  <name>robot4ws_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>The robot4ws_gazebo_plugins package - ROS2 Humble, Gazebo SIM</description>
  <url>https://github.com/unitsSpaceLab/robot4ws-gazebo-plugins</url>

  <author email="matteo.caruso@phd.units.it">Matteo Caruso</author>
  <maintainer email="simone.cottiga@phd.units.it">Simone Cottiga</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot4ws_msgs</depend>
  <depend>rosidl_default_runtime</depend> 

  <!-- Gazebo SIM -->
  <depend>gz-sim8</depend>
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>

  <!-- YAML -->
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <!-- ROS2 msg Introspection -->
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
